@@ -1,3 +1,9 @@
+2011-06-08  Andreas Kupries  <andreask@activestate.com>
+
+	* generic/tclExecute.c: Reverted the fix for [Bug 3274728]
+	committed on 2011-04-06 and replaced with one which is
+	64bit-safe. The existing fix crashed tclsh on Windows 64bit.
+
 2011-06-08  Donal K. Fellows  <dkf@users.sf.net>
 
 	* tests/fileSystem.test: Reduce the amount of use of duplication of
